fix mobile forecast days overflow issue

--- a/src/style.css
+++ b/src/style.css
@@ -289,6 +289,10 @@ input#search {
     text-align: center;
   }
 
+  .group.daily:nth-child(5) {
+    display: none;
+  }
+
   .forecast-img {
     transform: scale(0.45);
     top: 2.3rem;
